comments overflow fix

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -18,6 +18,12 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+@media only screen and (max-width: 451px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+  }
+}
 
 .main_flexbox__container {
   position: relative;
